Fix Quality Gate